--- a/src/stories/atoms/box/box.module.scss
+++ b/src/stories/atoms/box/box.module.scss
@@ -17,3 +17,10 @@
 .box--full-height {
   height: 100%;
 }
+
+.box--warning-border {
+  border-color: var(--warning-color);
+}
+.box--error-border {
+  border-color: var(--error-color);
+}
