--- a/src/stories/molecules/inputSelect/inputSelect.module.scss
+++ b/src/stories/molecules/inputSelect/inputSelect.module.scss
@@ -56,7 +56,7 @@
   background-color: var(--alternative-background-color);
 }
 .input-select--option--odd {
-  background-color: var(--background-color);
+  background-color: var(--odd-option-color);
 }
 .input-text--input-container {
   background-color: var(--alternative-background-color);
